--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -79,7 +79,7 @@ DISABLE_AUTO_UPDATE="true"
 plugins=({{ oh_my_zsh.plugins | default(oh_my_zsh_plugins) | join(' ') }})
 
 source $ZSH/oh-my-zsh.sh
-source <(kubectl completion zsh)
+if [ $commands[kubectl] ]; then source <(kubectl completion zsh); fi
 
 # User configuration
 
