--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -7,6 +7,8 @@
 
 # Path to your oh-my-zsh installation.
 export ZSH=$HOME/.oh-my-zsh
+export GOPATH=$HOME/go
+export PATH=$PATH:$GOPATH/bin
 
 
 
@@ -78,7 +80,7 @@ DISABLE_AUTO_UPDATE="true"
 # Add wisely, as too many plugins slow down shell startup.
 plugins=({{ oh_my_zsh.plugins | default(oh_my_zsh_plugins) | join(' ') }})
 
-source $ZSH/oh-my-zsh.sh
+source $ZSH/oh-my-zs    h.sh
 if [ $commands[kubectl] ]; then source <(kubectl completion zsh); fi
 
 # User configuration
