Customize kubectx console colors

--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -11,6 +11,8 @@ export GOPATH=$HOME/go
 export PATH=$PATH:$GOPATH/bin
 
 
+export KUBECTX_CURRENT_FGCOLOR=$(tput setaf 6) # blue text
+export KUBECTX_CURRENT_BGCOLOR=$(tput setab 7) # white background
 
 ZSH_DISABLE_COMPFIX=true
 
