--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -13,6 +13,8 @@ export PATH=$PATH:$GOPATH/bin
 
 export KUBECTX_CURRENT_FGCOLOR=$(tput setaf 6) # blue text
 export KUBECTX_CURRENT_BGCOLOR=$(tput setab 7) # white background
+export FZF_DEFAULT_OPTS='--height 40% --layout=reverse --border'
+export FZF_DEFAULT_COMMAND='fd --type f'
 
 ZSH_DISABLE_COMPFIX=true
 
