--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -16,6 +16,20 @@ export KUBECTX_CURRENT_BGCOLOR=$(tput setab 7) # white background
 export FZF_DEFAULT_OPTS='--height 40% --layout=reverse --border'
 export FZF_DEFAULT_COMMAND='fd --type f'
 
+
+case `uname` in
+  Darwin)
+    # commands for OS X go here
+    alias nano='/usr/local/bin/nano'
+  ;;
+  Linux)
+    # commands for Linux go here
+  ;;
+  FreeBSD)
+    # commands for FreeBSD go here
+  ;;
+esac
+
 ZSH_DISABLE_COMPFIX=true
 
 # Set name of the theme to load --- if set to "random", it will
