--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -128,3 +128,4 @@ if [ $commands[kubectl] ]; then source <(kubectl completion zsh); fi
 # alias ohmyzsh="mate ~/.oh-my-zsh"
 alias update="curl -H 'Cache-Control: no-cache' -fsSL https://raw.githubusercontent.com/daco-tech/myHomeMaker/master/installLinuxMac.sh | bash"
 alias config="~/myHomeMaker/configure.sh"
+alias gfp="git add .; git commit -m "Fast Push"; git push;"
