--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -17,6 +17,12 @@ export FZF_DEFAULT_OPTS='--height 40% --layout=reverse --border'
 export FZF_DEFAULT_COMMAND='fd --type f'
 
 
+# IMPORT BASH PROFILE
+BASH_PROFILE=~/.bash_profile
+if test -f "$BASH_PROFILE"; then
+    source ~/.bash_profile
+fi
+
 case `uname` in
   Darwin)
     # commands for OS X go here
