--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -135,3 +135,4 @@ if [ $commands[kubectl] ]; then source <(kubectl completion zsh); fi
 alias update="curl -H 'Cache-Control: no-cache' -fsSL https://raw.githubusercontent.com/daco-tech/myHomeMaker/master/installLinuxMac.sh | bash"
 alias config="~/myHomeMaker/configure.sh"
 alias gfp="git add .; git commit -m "Fast Push"; git push;"
+alias code="codium"
