Add brew cask alternative

--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -136,3 +136,4 @@ alias update="curl -H 'Cache-Control: no-cache' -fsSL https://raw.githubusercont
 alias config="~/myHomeMaker/configure.sh"
 alias gfp="git add .; git commit -m "Fast Push"; git push;"
 alias code="codium"
+alias brew cask="brew install --cask"
