Fix codium settings

--- a/ansible/roles/vscodium/templates/settings.json.j2
+++ b/ansible/roles/vscodium/templates/settings.json.j2
@@ -1,7 +1,4 @@
 {
-    {
-        "editor.fontSize": 15
-    },
     "editor.fontFamily": "Fira Code",
     "editor.fontLigatures": true,
     "editor.fontSize": 15,
@@ -21,8 +18,7 @@
     "files.autoSave": "afterDelay",
     "go.formatTool": "goimports",
     "go.useLanguageServer": true,
-    "terminal.integrated.fontFamily": "{{ terminal_font }}", #On Mac: Hack Nerd Fonts
-    "terminal.integrated.fontSize": 14,
+    "terminal.integrated.fontFamily": "monospace",
     "window.zoomLevel": 0,
     "workbench.colorCustomizations": {
         "activityBarBadge.background": "#80CBC4",
