--- a/ansible/roles/tmux/templates/tmux-conf.j2
+++ b/ansible/roles/tmux/templates/tmux-conf.j2
@@ -22,4 +22,5 @@ bind -n M-Down select-pane -D
 set -g mouse on
 
 # Enable Highlight Prefix Key
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
