--- a/ansible/roles/tmux/templates/tmux-conf.j2
+++ b/ansible/roles/tmux/templates/tmux-conf.j2
@@ -24,3 +24,7 @@ set -g mouse on
 # Enable Highlight Prefix Key
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+
+
+set -g @plugin 'tmux-plugins/tpm'
+run '~/.tmux/plugins/tpm/tpm'
