--- a/ansible/roles/tmux/templates/tmux-conf.j2
+++ b/ansible/roles/tmux/templates/tmux-conf.j2
@@ -25,6 +25,9 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
+# Tmux Navigator
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
 
 set -g @plugin 'tmux-plugins/tpm'
 run '~/.tmux/plugins/tpm/tpm'
