--- a/ansible/roles/tmux/templates/tmux-conf.j2
+++ b/ansible/roles/tmux/templates/tmux-conf.j2
@@ -25,8 +25,14 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
-# Tmux Navigator
-set -g @plugin 'christoomey/vim-tmux-navigator'
+# Tmux Dracula
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-powerline true
+set -g @dracula-fixed-location {{ vars.city }}
+set -g @dracula-plugins "weather"
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session  
+set -g status-position top
 
 
 set -g @plugin 'tmux-plugins/tpm'
