--- a/ansible/roles/tmux/templates/tmux-conf.j2
+++ b/ansible/roles/tmux/templates/tmux-conf.j2
@@ -32,7 +32,7 @@ set -g @dracula-fixed-location {{ vars.city }}
 set -g @dracula-plugins "weather"
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session  
-set -g status-position top
+#set -g status-position top
 
 
 set -g @plugin 'tmux-plugins/tpm'
