--- a/ansible/roles/tmux/templates/tmux-conf.j2
+++ b/ansible/roles/tmux/templates/tmux-conf.j2
@@ -1,3 +1,5 @@
+source "~/powerline/powerline/bindings/tmux/powerline.conf"
+
 # remap prefix from '{{ vars.ctrlkey }}b' to '{{ vars.ctrlkey }}a'
 unbind {{ vars.ctrlkey }}b
 set-option -g prefix {{ vars.ctrlkey }}a
