--- a/ansible/roles/tmux/templates/tmux-conf.j2
+++ b/ansible/roles/tmux/templates/tmux-conf.j2
@@ -29,6 +29,8 @@ set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
 # Tmux Dracula
 set -g @plugin 'dracula/tmux'
+# Set 256 colors
+set -s default-terminal 'tmux-256color'
 set -g @dracula-show-powerline true
 set -g @dracula-fixed-location {{ vars.city }}
 set -g @dracula-plugins "weather"
@@ -37,6 +39,8 @@ set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session  
 #set -g status-position top
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @plugin 'tmux-plugins/tpm'
 run '~/.tmux/plugins/tpm/tpm'
