--- a/ansible/roles/tmux/templates/tmux-conf.j2
+++ b/ansible/roles/tmux/templates/tmux-conf.j2
@@ -31,13 +31,19 @@ set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 set -g @plugin 'dracula/tmux'
 # Set 256 colors
 set -s default-terminal 'tmux-256color'
+# Config Dracula Theme
+set -g @dracula-show-fahrenheit false
 set -g @dracula-show-powerline true
+set -g @dracula-show-network false
+set -g @dracula-show-left-icon session
+set -g @dracula-cpu-usage true
+set -g @dracula-ram-usage true
+set -g @dracula-day-month true
+set -g @dracula-military-time true
+set -g @dracula-show-flags true 
 set -g @dracula-fixed-location {{ vars.city }}
 set -g @dracula-plugins "weather"
-set -g @dracula-show-fahrenheit false
 set -g @dracula-show-flags true
-set -g @dracula-show-left-icon session  
-#set -g status-position top
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
