--- a/ansible/roles/tmux/templates/tmux-conf.j2
+++ b/ansible/roles/tmux/templates/tmux-conf.j2
@@ -30,7 +30,7 @@ set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 # Tmux Dracula
 set -g @plugin 'dracula/tmux'
 # Set 256 colors
-set -s default-terminal 'tmux-256color'
+set -s default-terminal 'screen-256color' #'tmux-256color'
 # Config Dracula Theme
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-powerline true
