--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -20,9 +20,9 @@ export KUBECTX_CURRENT_BGCOLOR=$(tput setab 7) # white background
 export FZF_DEFAULT_OPTS='--height 40% --layout=reverse --border'
 export FZF_DEFAULT_COMMAND='fd --type f'
 
-export KUBECONFIG=~/.kube/config:$(find ~/.kube/cfg/ -type f | tr '\n' ':')
-kubectl config view --flatten > all-in-one-kubeconfig.yaml
-mv all-in-one-kubeconfig.yaml ~/.kube/config
+export KUBECONFIG=~/.kube/config:$(find ~/.kube/cfg -type f | tr '\n' ':')
+#kubectl config view --flatten > all-in-one-kubeconfig.yaml
+#mv all-in-one-kubeconfig.yaml ~/.kube/config
 
 # IMPORT BASH PROFILE
 BASH_PROFILE=~/.bash_profile
