--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -15,12 +15,12 @@ export GOPATH=$HOME/go
 export PATH=$PATH:$GOPATH/bin
 
 
-export KUBECTX_CURRENT_FGCOLOR=$(tput setaf 6) # blue text
-export KUBECTX_CURRENT_BGCOLOR=$(tput setab 7) # white background
+#export KUBECTX_CURRENT_FGCOLOR=$(tput setaf 6) # blue text
+#export KUBECTX_CURRENT_BGCOLOR=$(tput setab 7) # white background
 export FZF_DEFAULT_OPTS='--height 40% --layout=reverse --border'
 export FZF_DEFAULT_COMMAND='fd --type f'
 
-export KUBECONFIG=~/.kube/config:$(find ~/.kube/cfg -type f | tr '\n' ':')
+#export KUBECONFIG=~/.kube/config:$(find ~/.kube/cfg -type f | tr '\n' ':')
 #kubectl config view --flatten > all-in-one-kubeconfig.yaml
 #mv all-in-one-kubeconfig.yaml ~/.kube/config
 
