--- a/ansible/roles/tmux/templates/tmux-conf.j2
+++ b/ansible/roles/tmux/templates/tmux-conf.j2
@@ -46,7 +46,7 @@ set -g @dracula-plugins "weather"
 set -g @dracula-show-flags true
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
 
 
 # restore vim sessions
@@ -56,7 +56,7 @@ set -g @resurrect-strategy-nvim 'session'
 # restore panes
 set -g @resurrect-capture-pane-contents 'on'
 # restore last saved environment (automatically)
-set -g @continuum-restore 'on'
+#set -g @continuum-restore 'on'
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
