--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -142,7 +142,7 @@ if [ $commands[kubectl] ]; then source <(kubectl completion zsh); fi
 alias update="curl -H 'Cache-Control: no-cache' -fsSL https://raw.githubusercontent.com/daco-tech/myHomeMaker/master/installLinuxMac.sh | bash"
 alias config="~/myHomeMaker/configure.sh"
 alias gfp="git add .; git commit -m "Fast Push"; git push;"
-alias code="codium"
+#alias code="codium"
 alias brew cask="brew install --cask"
 source <(kubectl completion zsh)
 alias kubectl=kubecolor
@@ -153,3 +153,4 @@ alias kn="kubens"
 alias kc="kubectx"
 alias apt="nala"
 alias apt-get="nala"
+alias sudo="sudo "
