--- a/ansible/roles/oh-my-zsh/templates/zshrc.j2
+++ b/ansible/roles/oh-my-zsh/templates/zshrc.j2
@@ -154,3 +154,6 @@ alias kc="kubectx"
 alias apt="nala"
 alias apt-get="nala"
 alias sudo="sudo "
+alias vpnon="sudo wg-quick up wg0"
+alias vpnoff="sudo wg-quick down wg0"
+alias vpnstatus="wg"
